syntax = "proto3";
option  java_multiple_files = true;
option  csharp_namespace = "proto";
option  go_package = ".;proto";

message CreateModuleRequest {
  string Code = 1;
  string Secret = 2;
}

message GetModuleRequest {
  string Code = 1;
}

message ListModuleRequest {}

message ListSessionsOfModuleRequest {
  string Code = 1;
}

message CreateClientRequest {
  string ID = 1;
  string Secret = 2;
}

message CreateEndpointRequest {
  string Module = 1;
  string URL = 2;
  string Name = 3;
}

message CreateConsumerRequest {
  string Sender = 1;   /* sender context */
  string Receiver = 2; /* receiver context */
}

message ListSessionRequest {
  string ModuleCode = 1;
}

message SessionItem {
  string SessionID = 1;
  int32  State = 2;
  string LastUpdated = 3;
  string StartTime = 4;
  string EndTime = 5;
}

message ListSessionResponse {
  repeated SessionItem sessions = 1;
}